--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -55,7 +55,9 @@ pipeline {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     cd ${WORKSPACE}
-                    
+
+                    git config --global --add safe.directory ${WORKSPACE}
+
                     rm -rf .git
                     if [ ! -d .git ]; then
                         git init
