--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -56,6 +56,8 @@ pipeline {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     cd ${WORKSPACE}
+
+                    git config --global --add safe.directory ${WORKSPACE}
                     git config user.email "bookaif786@gmail.com"
                     git config user.name "Mohammed Samiuddin"
                     BUILD_NUMBER=${BUILD_NUMBER}
